[package]
name = "seed_gen_cli"
version = "0.1.0"
authors = ["Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bugsalot = "0.1.4"
structopt = "0.3.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
