[package]
name = "seed_gen_cli"
description = "Command line interface to generate seeds for the Ori and the Will of the Wisps Randomizer"
version = "0.2.0"
authors = ["Sirius Ashling <siriusashling@gmail.com>", "Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2018"
repository = "https://github.com/sparkle-preference/OriWotwRandomizerClient/tree/master/projects/SeedGenCli"
publish = false

[dependencies]
atty = "0.2.14"
bugsalot = "0.1.4"
structopt = "0.3.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
rustc-hash = "1.1.0"
rand = "0.8.3"
rand_seeder = "0.2.2"
rand_pcg = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
